@@ -1,3 +1,7 @@
+Mon Feb 12 17:46:24 CET 2001  Jan Hubicka  <jh@suse.cz>
+
+	* elf64-x86-64.c (x86_64_elf_howto): Fix name of R_X86_64_GOTPCREL.
+
 2001-02-11  H.J. Lu  <hjl@gnu.org>
 
 	* elflink.h (elf_bfd_final_link): Use file_align for STMTAB
